--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "hws2",
-  "homepage": "https://github.com/DimaKulpanovich/homework_front_2",
+  "homepage": "https://dimakulpanovich.github.io/homework_front_2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
     "@mui/material": "5.10.6",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.5.2",
     "@types/node": "16.11.56",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
@@ -52,5 +48,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.5.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.1.1"
   }
 }
